20200403 added localhost files

--- a/templates/account_mail.html
+++ b/templates/account_mail.html
@@ -294,7 +294,7 @@ margin-top:50%;
                   <div class="card-block">
                     <div class="card-header">
                       <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h5 class="card-title mb-0" >Contact Details
+                        <h5 class="card-title mb-0" >Contact Information
                           <button type="submit" class="pencil"> <i class="fa fa-pencil" aria-hidden="true"></i></button></h5>
                       </div>
                     </div>
@@ -350,16 +350,16 @@ margin-top:50%;
                                     </div>
                                     <div class="row form-group">
                                         <label class="col-md-3 col-sm-12 col-xs-12 lbl" for="email">Secondary Email IDs</label>
-                                        <input type="email" value="{{user_p_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email1" name="entity_email1" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
+                                        <input type="email" maxlength="254" value="{{user_p_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email1" name="entity_email1" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
                                     </div>
                                     <div class="row form-group">
                                         <label class="col-md-3 col-sm-12 col-xs-12 lbl" for="email">                </label>
 
-                                        <input type="email" value="{{user_s1_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email2" name="entity_email2" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
+                                        <input type="email" maxlength="254" value="{{user_s1_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email2" name="entity_email2" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
                                     </div>
                                     <div class="row form-group">
                                         <label class="col-md-3 col-sm-12 col-xs-12 lbl" for="email">           </label>
-                                        <input type="email"  value="{{user_s2_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email3" name="entity_email3" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
+                                        <input type="email" maxlength="254" value="{{user_s2_mail}}" class="col-md-8 col-sm-12 col-xs-12"  id="entity_email3" name="entity_email3" pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}"/>
                                     </div>
 
 
