--- a/templates/editaccount_contact.html
+++ b/templates/editaccount_contact.html
@@ -408,7 +408,7 @@ font-family: 'Montserrat';
                               <div class="card-block">
                                 <div class="card-header">
                                     <div class="d-flex justify-content-between align-items-center mb-3">
-                                        <h5 class="card-title mb-0" >Email Details
+                                        <h5 class="card-title mb-0" >Link Account Information
                                         <button type="submit" class="pencil"><i class="fa fa-pencil" aria-hidden="true"></i></button>
                                 </h5>
                                     </div>
