--- a/templates/editaccount_company2.html
+++ b/templates/editaccount_company2.html
@@ -200,7 +200,7 @@ width:100%;
 				<div class="dropdown-menu dropdown-content dropdown-menu-right" role="menu" aria-labelledby="navbarDropdown1">
 				  <a href="accountinfo">Account Info</a>
 				  <a href="#">Payment Info</a>
-				  <a href="#">Forgot Password</a>
+				  <a href="password_reset">Forgot Password</a>
 			   </div>
 			  </li>
 			  </div>
@@ -476,7 +476,7 @@ width:100%;
                                     <div class="card-header1">
                                       <div class="d-flex  justify-content-between align-items-center mb-3">
                                         <h5 class="card-title mb-0">
-                                          <button type="button" onclick="accountinfo" class="mt-0 pull-right  btn-four" >Cancel</button>
+                                          <button formaction="accountinfo" class="mt-0 pull-right  btn-four" >Cancel</button>
                                           <button type="submit" class="mt-0 mr-5 pull-right btn-four1" style="margin-right:6px;">Save </button>
                                         </h5>
                                        
