--- a/templates/vendor.html
+++ b/templates/vendor.html
@@ -212,7 +212,7 @@ tbody{
 				<div class="dropdown-menu dropdown-content dropdown-menu-right" role="menu" aria-labelledby="navbarDropdown1">
 				  <a href="accountinfo">Account Info</a>
 				  <a href="#">Payment Info</a>
-				  <a href="#">Forgot Password</a>
+				  <a href="password_reset">Forgot Password</a>
 			   </div>
 			  </li>
 			  </div>
@@ -577,7 +577,17 @@ function deleteUser(id, name) {
 
 	    }
 
-    }
+    },
+    error: function (xhr, status, errorThrown) {
+        			//Here the status code can be retrieved like;
+        			alert(xhr.status);
+
+					//The message added to Response object in Controller can be retrieved as following.
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
+    			}
   });
   }
 });
