--- a/templates/vendoradd5.html
+++ b/templates/vendoradd5.html
@@ -89,7 +89,7 @@
 				<div class="dropdown-menu dropdown-content dropdown-menu-right" role="menu" aria-labelledby="navbarDropdown1">
 				  <a href="accountinfo">Account Info</a>
 				  <a href="#">Payment Info</a>
-				  <a href="#">Forgot Password</a>
+				  <a href="password_reset">Forgot Password</a>
 			   </div>
 			  </li>
 			  </div>
@@ -399,12 +399,22 @@
 						$('#spancompanynickname').text("");
 						return true;
                 	}
-            	}
+            	},
+            	error: function (xhr, status, errorThrown) {
+        			//Here the status code can be retrieved like;
+        			alert(xhr.status);
+
+					//The message added to Response object in Controller can be retrieved as following.
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
+    			}
         	});
 		 }
 		 else
 		 {
-		 	//$('#spancompanynickname').text("Company Nick Name is Required ");
+		 	$('#spancompanynickname').text("Company Nick Name is Required ");
 		 	$('#company_nick_name').focus();
 		 	return true;
 		}
@@ -448,10 +458,13 @@
             	},
             	error: function (xhr, status, errorThrown) {
         			//Here the status code can be retrieved like;
-        			aler(xhr.status);
+        			//alert(xhr.status);
 
 					//The message added to Response object in Controller can be retrieved as following.
-        			alert(xhr.responseText);
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
     			}
         	});
 		}
@@ -496,10 +509,12 @@ $(document).ready(function(){
             	},
             	error: function (xhr, status, errorThrown) {
         			//Here the status code can be retrieved like;
-        			alert(xhr.status);
+        			//alert(xhr.status);
 
         			//The message added to Response object in Controller can be retrieved as following.
-        			alert(xhr.responseText);
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
     			}
         	});
         	//alert("hi")
