--- a/templates/403.html
+++ b/templates/403.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Please Login</title>
+<title>Error</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Main Style Css -->
