--- a/templates/confirmform.html
+++ b/templates/confirmform.html
@@ -45,9 +45,9 @@
 			</a>
 		  </li>
 		  <div class="dropdown-content">
-				<a href="#">Account Info</a>
+				<a href="accountinfo">Account Info</a>
 				<a href="#">Payment Info</a>
-				<a href="#">Forgot Password</a>
+				<a href="password_reset">Forgot Password</a>
 		  </div>		 		
 		</div>
 		<li><a href="#">
