--- a/templates/duplicateeditvendorinfo.html
+++ b/templates/duplicateeditvendorinfo.html
@@ -108,7 +108,7 @@
 				<div class="dropdown-menu dropdown-content dropdown-menu-right" role="menu" aria-labelledby="navbarDropdown1">
 				  <a href="accountinfo">Account Info</a>
 				  <a href="#">Payment Info</a>
-				  <a href="#">Forgot Password</a>
+				  <a href="password_reset">Forgot Password</a>
 			   </div>
 			  </li>
 			  </div>
@@ -427,7 +427,17 @@
 						$('#spancompanynickname').text("");
 						return true;
                 	}
-            	}
+            	},
+            	error: function (xhr, status, errorThrown) {
+        			//Here the status code can be retrieved like;
+        			alert(xhr.status);
+
+					//The message added to Response object in Controller can be retrieved as following.
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
+    			}
         	});
 		 }
 		 else
@@ -469,7 +479,17 @@
 						$('#company_name_reg').focus();
 						return true;
                 	}
-            	}
+            	},
+            	error: function (xhr, status, errorThrown) {
+        			//Here the status code can be retrieved like;
+        			//alert(xhr.status);
+
+					//The message added to Response object in Controller can be retrieved as following.
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
+    			}
         	});
 		}
 }
@@ -511,7 +531,17 @@ $('#spancompanynickname').text("company_nick_name already exist")
 						$('#spancompanynickname').text("");
 						return true;
                 	}
-            	}
+            	},
+            	error: function (xhr, status, errorThrown) {
+        			//Here the status code can be retrieved like;
+        			//alert(xhr.status);
+
+					//The message added to Response object in Controller can be retrieved as following.
+        			//alert(xhr.responseText);
+        			document.write(xhr.responseText);
+        			return false;
+
+    			}
         	});
         	//alert("hi")
   			//return False;
