--- a/templates/reportform.html
+++ b/templates/reportform.html
@@ -42,7 +42,7 @@
 		  <div class="dropdown-content">
 				<a href="accountinfo">Account Info</a>
 				<a href="#">Payment Info</a>
-				<a href="#">Forgot Password</a>
+				<a href="password_reset">Forgot Password</a>
 		  </div>		 		
 		</div>
 		<li><a href="#">
