--- a/templates/signup.html
+++ b/templates/signup.html
@@ -37,6 +37,19 @@
 
                         </div>
                     {% endif %}
+        {% if messages %}
+                        <div class="alert alert-danger alert-dismissible col-12 mx-1" role="alert">
+                            <div id="form_errors">
+                                {% for message in messages %}
+                                    <span class="fieldWrapper">
+                                        {{ message }}
+                                    </span>
+                                {% endfor %}
+                            </div>
+
+                        </div>
+                    {% endif %}
+
       <form class="login100-form validate-form flex-sb flex-w" action="" method="POST">
            {% csrf_token %}
         <div class="login-grids">
