--- a/templates/successform.html
+++ b/templates/successform.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="../static/css/demo/site-demos.css">
 	<!--<link rel="stylesheet" href="../static/css/style.css"/>-->
 	<link rel="stylesheet" href="../static/css/site-demos.css"/>
+	<script src="../static/vendor/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
 <!--	<link rel="stylesheet" href="../static/vendor/bootstrap-3.4.1-dist/css/bootstrap.min.css">
   <script src="../static/vendor/bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
   <script src="../static/js/jquery-3.3.1.min.js"></script>-->
@@ -79,7 +80,7 @@
 				<div class="dropdown-menu dropdown-content dropdown-menu-right" role="menu" aria-labelledby="navbarDropdown1">
 				  <a href="accountinfo">Account Info</a>
 				  <a href="#">Payment Info</a>
-				  <a href="#">Forgot Password</a>
+				  <a href="password_reset">Forgot Password</a>
 			   </div>
 			  </li>
 			  </div>
